k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
  namespace: sale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: momtaz/order:1-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: sale
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 3002
      targetPort: 3002
