k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
  namespace: sale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: momtaz/product:1-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  namespace: sale
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 3003
      targetPort: 3003
