k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: sale.com
      http:
        paths:
          - path: /auth/?(.*)
            backend:
              serviceName: auth-svc
              servicePort: 3001
          - path: /products/?(.*)
            backend:
              serviceName: product-svc
              servicePort: 3003
